minor bug fixed and scrollbar added

--- a/airbnb-clone/app/globals.css
+++ b/airbnb-clone/app/globals.css
@@ -9,7 +9,7 @@ body,
 }
 
 ::-webkit-scrollbar {
-  width: 5rem;
+  width: 0.5rem;
   height: 0.5rem;
 }
 
